src/tests/cases/snapshots/excise__tests__cases__ui__cannot_move_into_small_files-2.snap
---
source: src/tests/cases/ui.rs
expression: normalized
---
 EXCISE  /tmp/excise_tests/cannot_move_into_small_files  ◆ COMPLETE                                                                                                                           
 allocated #.#M   reclaim #.#M   apparent 2.3M   12 entries                                                                                                                                   
──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
┌ STORAGE MAP ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐┌ INSPECT ─────────────────────────┐
│┌────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┬──────────────────────────┤│file2                             │
││████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████│                          ││◆ COMPLETE · file                 │
││████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████│                          ││allocated #.#M                    │
││████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████│                          ││reclaim   #.#M                    │
││████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████│                          ││apparent 1.0M · entries 0         │
││████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████│                          ││identity  Inod[...]ber: ######## }│
││████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████│                          ││links     1 · [...]   materialized│
││████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████│                          ││                                  │
││████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████│                          ││                                  │
││████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████│                          ││                                  │
││███████████████████████████████████████████████████████████file2████████████████████████████████████████████████████████████│                          ││                                  │
││████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████│                          ││                                  │
││█████████████████████████████████████████████████████████1.0M (41%)█████████████████████████████████████████████████████████│                          ││                                  │
││████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████│                          ││                                  │
││████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████│                          ││                                  │
││████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████│                          ││                                  │
││████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████│                          ││                                  │
││████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████│                          ││                                  │
││████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████│          file1           ││                                  │
││████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████│                          ││                                  │
││████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████│                          ││                                  │
││████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████│       392.0K (16%)       ││                                  │
│├────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤                          ││                                  │
││                                                                                                                            │                          ││                                  │
││                                                                                                                            │                          ││                                  │
││                                                                                                                            │                          ││                                  │
││                                                                                                                            │                          ││                                  │
││                                                                                                                            │                          ││                                  │
││                                                                                                                            │                          ││                                  │
││                                                                                                                            │                          ││                                  │
││                                                                                                                            │                          ││                                  │
││                                                           file3                                                            │                          ││                                  │
││                                                                                                                            │                          ││                                  │
││                                                                                                                            │                          ││                                  │
││                                                         1.0M (41%)                                                         │                          ││                                  │
││                                                                                                                            │                          ││                                  │
││                                                                                                                            │                          ││                                  │
││                                                                                                                            │                          ││                                  │
││                                                                                                                            │                          ││                                  │
││                                                                                                                            ├─────────────────────────┬┤│                                  │
││                                                                                                                            │·Small entries···········│││                                  │
││                                                                                                                            │·························│││                                  │
││                                                                                                                            ├─────────────────────────┘││                                  │
└┴────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┴──────────────────────────┘└──────────────────────────────────┘
 / filter  arrows/Vim move  Enter open/rescan  Backspace delete  ? help  mem 96.0M/384.0M                                                                                                     
Small entries are a viewport summary · use / filter or zoom
