src/tests/cases/snapshots/excise__tests__cases__ui__cannot_move_into_small_files-4.snap
---
source: src/tests/cases/ui.rs
expression: "&terminal_draw_events_mirror[3]"
---
 Total: 2.3M (12 files), freed: 0 | /tmp/excise_tests/cannot_move_into_small_files                                                                                                            
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┬─────────────────────────────────┐
│                                                                                                                                                          │                                 │
│                                                                                                                                                          │                                 │
│                                                                                                                                                          │                                 │
│                                                                                                                                                          │                                 │
│                                                                                                                                                          │                                 │
│                                                                                                                                                          │                                 │
│                                                                                                                                                          │                                 │
│                                                                                                                                                          │                                 │
│                                                                                                                                                          │                                 │
│                                                                          file2                                                                           │                                 │
│                                                                                                                                                          │                                 │
│                                                                                                                                                          │                                 │
│                                                                        1.0M (41%)                                                                        │                                 │
│                                                                                                                                                          │                                 │
│                                                                                                                                                          │                                 │
│                                                                                                                                                          │                                 │
│                                                                                                                                                          │                                 │
│                                                                                                                                                          │                                 │
│                                                                                                                                                          │                                 │
│                                                                                                                                                          │              file1              │
│                                                                                                                                                          │                                 │
│                                                                                                                                                          │          392.0K (16%)           │
├──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤                                 │
│                                                                                                                                                          │                                 │
│                                                                                                                                                          │                                 │
│                                                                                                                                                          │                                 │
│                                                                                                                                                          │                                 │
│                                                                                                                                                          │                                 │
│                                                                                                                                                          │                                 │
│                                                                                                                                                          │                                 │
│                                                                                                                                                          │                                 │
│                                                                                                                                                          │                                 │
│                                                                          file3                                                                           │                                 │
│                                                                                                                                                          │                                 │
│                                                                                                                                                          │                                 │
│                                                                        1.0M (41%)                                                                        │                                 │
│                                                                                                                                                          │                                 │
│                                                                                                                                                          │                                 │
│                                                                                                                                                          │                                 │
│                                                                                                                                                          │                                 │
│                                                                                                                                                          │                                 │
│                                                                                                                                                          ├─────────────────────────────────┤
│                                                                                                                                                          │xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx│
│                                                                                                                                                          │xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx│
│                                                                                                                                                          │xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx│
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┴─────────────────────────────────┘
                                                                                                                                                                            (x = Small files) 
 <arrows> - move around, <ENTER> - enter folder, <ESC> - parent folder, <BACKSPACE> - delete, <+/-/0> - zoom in/out/reset, <q> - quit
